--- a/问道云/问道云.entitlements
+++ b/问道云/问道云.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:www.wintaocloud.com/</string>
+		<string>applinks:www.wintaocloud.com</string>
 	</array>
 </dict>
 </plist>
