add:新增添加关联方

--- a/问道云/Info.plist
+++ b/问道云/Info.plist
@@ -8,7 +8,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>weixin</string>
+			<string>wechat</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>wx24b1a40f5ff2811e</string>
