--- a/问道云/Main/Info.plist
+++ b/问道云/Main/Info.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
-	<key>UIFileSharingEnabled</key>
-	<true/>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -26,5 +24,12 @@
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 	</dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>wechat</string>
+		<string>weixin</string>
+		<string>weixinURLParamsAPI</string>
+		<string>weixinULAPI</string>
+	</array>
 </dict>
 </plist>
